# Joba_Solplanet

./: .gitignore  CMakeLists.txt  README.md  influx_config.h.in  modbus_config.h.in  mqtt_config.h.in  platformio.ini  upload_script.py
doc/: MB001_ASW GEN-Modbus-en_V2.1.1.txt  eastron_sdm72dmv2.txt
include/: modbus_registers.h  modbus_sniffer.h
src/: ModbusRtuDecoder.cpp  ModbusRtuDecoder.h  main.cpp  modbus_registers.cpp  modbus_registers.h  modbus_sniffer.cpp
